--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SCR-E String Function</title>
+  <title>Goblin Translator</title>
+
 
   <!-- CSS styles for the webpage -->
 <style>
